# axon-doc

./: .gitignore  AGENTS.md  EMBEDDING_RESEARCH.md  README.md  TASK_FLOW_ANALYSIS.md  next.config.mjs  next.config.ts  package.json
.github/: SECRETS_SETUP.md
.github/workflows/: docker-build.yml
app/: globals.css  layout.tsx
app/dashboard/: layout.tsx  page.tsx
app/login/: page.tsx
components/: CrawlDialog.tsx  CrawlJobList.tsx  DashboardHeader.tsx  TaskPanel.tsx
components/chat/: ErrorAlert.tsx
crawler-service/: .env.example  Dockerfile  main.py  pyproject.toml
crawler-service/app/: __init__.py  adaptive_crawler.py  analyzer.py  config.py  config_manager.py  crawler.py  database.py  job_manager.py  main.py  models.py  schemas.py  settings_loader.py  validator.py
deployment/: .env.example  .env.production.example  README.md  docker-compose.prod.yml  docker-compose.yml  kong-config.yml  setup.sh
deployment/docs/: CI_CD_SETUP.md  DEPLOYMENT.md  DEPLOY_QUICK_REFERENCE.md  DOCKER_README.md  GHCR_SETUP.md  QUICK_START.md
deployment/scripts/: deploy.sh  docker-entrypoint.sh  docker-healthcheck.sh  docker-troubleshoot.sh
docker/: Dockerfile.prod
lib/: embeddings.ts  error-extractor.ts  i18n.tsx  reranker.ts  task-context.tsx  validation.ts
lib/chunking/: context-generator.ts  index.ts  recursive-splitter.ts
lib/supabase/: access.ts  server.ts  types.ts
supabase/: config.toml
supabase/migrations/: 001_schema.sql  003_vector_embeddings.sql  004_system_settings.sql  005_contextual_chunks.sql  009_crawl_support.sql  010_crawl_pages.sql  (+3 more)
(+26 files in other folders)
